--- a/src/Components/Content.css
+++ b/src/Components/Content.css
@@ -10,6 +10,10 @@
   flex-wrap: wrap;
 }
 
+.content ul article {
+  width: 100%;
+}
+
 .content li {
   background: white;
   width: calc((100% - 6rem) / 4);
@@ -39,6 +43,7 @@
 
 .content li p {
   margin: 0;
+  font-size: 0.8rem;
   margin-bottom: 1.4rem;
 }
 
