--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,23 @@
   display: flex;
   height: 100vh;
 }
+
+.app .error {
+  background: #8881D8;
+  color: white;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.app .error div {
+  border: 1px solid white;
+  padding: 2rem;
+  width: 90%;
+  max-width: 600px;
+}
+
+.app .error span {
+  font-weight: bold;
+  color: pink;
+}
