--- a/src/Components/Content.css
+++ b/src/Components/Content.css
@@ -1,7 +1,6 @@
 .content {
-  padding: 8rem 2rem 2rem;
+  padding: 2rem;
   height: 100%;
-  width: calc(100% - 15rem);
   overflow-y: scroll;
 }
 
@@ -16,16 +15,13 @@
 
 .content li {
   background: white;
-  width: calc((100% - 6rem) / 4);
+  width: 100%;
   padding: 1rem;
-  margin-right: 2rem;
   margin-bottom: 2rem;
   border-radius: .3rem;
   box-shadow: 0 .4rem .5rem rgba(0,0,0,0.1);
-}
-
-.content li:nth-of-type(4n) {
-  margin-right: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .content li h2 {
@@ -58,6 +54,7 @@
   cursor: pointer;
   transition: all .2s ease;
   border-radius: .3rem;
+  align-self: flex-end;
 }
 
 .content li button:hover {
@@ -84,4 +81,32 @@
   font-size: 1rem;
   height: 100%;
   width: 100%;
+}
+
+@media screen and (min-width: 600px) {
+  .content li {
+    width: calc((100% - 2.5rem) / 2);
+    margin-right: 2rem;
+  }
+
+  .content li:nth-of-type(2n) {
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 860px) {
+  .content {
+    padding-top: 8rem;
+    width: calc(100% - 15rem);
+  }
+  
+  .content li,
+  .content li:nth-of-type(2n) {
+    width: calc((100% - 7.5rem) / 4);
+    margin-right: 2rem;
+  }
+  
+  .content li:nth-of-type(4n) {
+    margin-right: 0;
+  }
 }
